--- a/distiller_with_kure/distiller/requirements.txt
+++ b/distiller_with_kure/distiller/requirements.txt
@@ -1,11 +1,11 @@
 pillow<7  #  remove this when moving to torchvision>0.5 (see https://github.com/pytorch/vision/issues/1712#issuecomment-575036523)
 torch==1.3.1
-numpy>=1.16
+numpy==1.18.2
 torchvision==0.4.2
 scipy>=1.3.0
 gitpython==2.1.11
 torchnet==0.0.4
-tensorflow~=1.14
+tensorflow==1.15.2
 pydot==1.4.1
 tabulate==0.8.3
 pandas>=0.22.0
@@ -17,7 +17,7 @@ ipywidgets>=7.4.2
 bqplot==0.11.5
 pyyaml
 pytest~=4.6.1
-xlsxwriter>=1.2.2
+xlsxwriter==1.2.8
 pretrainedmodels==0.7.4
 scikit-learn==0.21.2
 gym==0.12.5
